packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-012.ttrp
// expect: TTRP-SQL-012
container c target erp_pg """sql
SELECT id FROM (SELECT id FROM u) x
"""
